--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "sanitize-html": "^2.16.0",
+    "sharp": "^0.34.3",
     "swiper": "^11.2.2"
   },
   "devDependencies": {
